<resources>
    <string name="app_name">ThePlants</string>
    <string name="enter_login_hint">Введите e-mail</string>
    <string name="enter_password_hint">Введите пароль</string>
    <string name="enter_login_button_text">Войти</string>
    <string name="enter_login_button_without_text">Войти без регистрации</string>
    <string name="enter_register_button_text">Зарегистрироваться</string>
    <string name="register_login_hint">Введите e-mail</string>
    <string name="register_password_hint">Введите пароль</string>
    <string name="register_password_hint_second">Введите пароль ещё раз</string>
    <string name="on_finish_register_button">Продолжить</string>
    <string name="exception_weak_password">используйте для пароля 6 или более символов</string>
    <string name="exception_already_exist_email">e-mail с таким именем уже существует</string>
    <string name="exception_not_exist_email">такого e-mail не существует</string>
    <string name="exception_wrong_format_email">вы используете неправильный формат для e-mail</string>
    <string name="exception_password_second">пароли не совпадают</string>
    <string name="enter_exception_null_field">поля не должны быть пустыми</string>
    <string name="exception_not_register_email">такой email не зарегистрирован</string>
    <string name="exception_wrong_password">вы ввели неправильный пароль</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="reset_password_email">Введите e-mail для восстановления пароля</string>
    <string name="reset_button_next">Продолжить</string>
    <string name="reset_button_back">Назад</string>
    <string name="reset_password_email_send">На ваш email был отправлено сообщение для сброса пароля</string>
    <string name="register_congratulations">Поздравляем, теперь вы зарегистрированы в The Plants</string>
    <string name="confirm_email_message">Для подтверждения на вашу электронную почту было отправлено сообщение</string>
    <string name="confirm_email">Для начала подтвердите вашу электронную почту</string>
    <string name="cancel">Отмена</string>
    <string name="log_in_system">Войти в систему</string>
    <string name="close">Закрыть</string>
    <string name="sign_out_have_account">Выход: Вы действительно хотите выйти из вашего аккаунта?</string>
    <string name="sign_out_not_have_account">Выход: Вы действительно хотите выйти из приложения?</string>
    <string name="you_already_sign_in_account">Вы уже вошли в текущий аккаунт</string>
    <string name="add_plant_title">Вы хотите добавить новый цветок?</string>
    <string name="pot_plant_button">Цветок горшка</string>
    <string name="create_plant_title_dialog">Создание цветка</string>
    <string name="dialog_message_plant_name">Выберите имя для вашего цветка</string>
    <string name="zamik">Замиокулькас</string>
    <string name="kaktus">Кактус</string>
    <string name="defaultPlant">default</string>
    <string name="sign_out">Выйти из аккаунта</string>
    <string name="dialog_calendar_choose_date">Выберите дату последнего полива вашего цветка</string>
    <string name="dialog_calendar_choose_actual_date">Выберите актуальную дату</string>
    <string name="arleux_calendar_choose_watering_days">Выберите день внезапного полива</string>
    <string name="dialog_calendar_forget_date">Не помню</string>
    <string name="dialog_calendar_not_future_date">Выберите дату до сегодняшнего дня</string>
    <string name="calendar_week_monday">пн</string>
    <string name="calendar_week_tuesday">вт</string>
    <string name="calendar_week_wednesday">ср</string>
    <string name="calendar_week_thursday">чт</string>
    <string name="calendar_week_friday">пт</string>
    <string name="calendar_week_saturday">сб</string>
    <string name="calendar_week_sunday">вс</string>
    <string name="calendar_month_january">Январь</string>
    <string name="calendar_month_february">Февраль</string>
    <string name="calendar_month_march">Март</string>
    <string name="calendar_month_april">Апрель</string>
    <string name="calendar_month_may">Май</string>
    <string name="calendar_month_june">Июнь</string>
    <string name="calendar_month_july">Июль</string>
    <string name="calendar_month_august">Август</string>
    <string name="calendar_month_semptember">Сентябрь</string>
    <string name="calendar_month_october">Октябрь</string>
    <string name="calendar_month_november">Ноябрь</string>
    <string name="calendar_month_december">Декабрь</string>
    <string name="calendar_year_2021">2021 г.</string>
</resources>