<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_by_art"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/enter_email"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:hint="@string/enter_login_hint"
        android:layout_marginTop="150dp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></EditText>

    <TextView
        android:id="@+id/exception_not_register_email"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_email"></TextView>

    <EditText
        android:id="@+id/enter_password"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:hint="@string/enter_password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exception_not_register_email"></EditText>

    <TextView
        android:id="@+id/exception_wrong_password"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_password"></TextView>

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="110dp"
        android:layout_height="25dp"
        android:text="Забыли пароль?"
        android:textColor="@android:color/darker_gray"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/exception_wrong_password"
        app:layout_constraintStart_toStartOf="@+id/exception_wrong_password"
        app:layout_constraintTop_toBottomOf="@+id/exception_wrong_password"></TextView>

    <ProgressBar
        android:id="@+id/progress_bar_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exception_wrong_password"></ProgressBar>

    <Button
        android:id="@+id/sign_in"
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:text="@string/enter_login_button_text"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toTopOf="@id/register_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exception_wrong_password"></Button>

    <Button
        android:id="@+id/register_in"
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:text="@string/enter_register_button_text"
        app:layout_constraintBottom_toTopOf="@id/sign_in_without"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in"></Button>

    <Button
        android:id="@+id/sign_in_without"
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:text="@string/enter_login_button_without_text"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_in"></Button>

</androidx.constraintlayout.widget.ConstraintLayout>