<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/register_email"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:hint="@string/register_login_hint"
        android:layout_marginTop="200dp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></EditText>

    <TextView
        android:id="@+id/exception_already_exist_email"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email"></TextView>

    <TextView
        android:id="@+id/exception_not_exist_email"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email"></TextView>

    <TextView
        android:id="@+id/exception_wrong_format_email"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email"></TextView>

    <EditText
        android:id="@+id/register_password"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:hint="@string/register_password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exception_wrong_format_email"></EditText>

    <TextView
        android:id="@+id/exception_weak_password"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password"></TextView>

    <ProgressBar
        android:id="@+id/register_progress_bar"
        android:layout_width="43dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toTopOf="@+id/registration_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/register_password"></ProgressBar>

    <Button
        android:id="@+id/registration_button"
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:text="@string/enter_register_button_text"
        android:layout_marginTop="180dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exception_weak_password"></Button>

</androidx.constraintlayout.widget.ConstraintLayout>