<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp">
    <FrameLayout
        android:layout_width="300dp"
        android:layout_height="270dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp">
        <Button
            android:id="@+id/settings_dialog_log_in_system_button_second"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/log_in_system">
        </Button>
        <Button
            android:id="@+id/settings_dialog_log_in_system_button_first"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/log_in_system">
        </Button>
        <LinearLayout
            android:id="@+id/dialog_main_register_log_in_layout"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:visibility="gone">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_account">
            </ImageView>
            <EditText
                android:id="@+id/settings_register_log_in_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:inputType="textEmailAddress"
                android:gravity="center_vertical"
                android:hint="@string/register_login_hint">
            </EditText>
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp">
        <TextView
            android:id="@+id/exception_already_exist_email_settings"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark">
        </TextView>
        <TextView
            android:id="@+id/exception_not_exist_email_settings"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark">
        </TextView>

        <TextView
            android:id="@+id/exception_wrong_format_email_settings"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark">
        </TextView>
    </FrameLayout>

    <FrameLayout
        android:layout_width="300dp"
        android:layout_height="180dp"
        android:layout_marginTop="130dp"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:id="@+id/dialog_main_register_password_layout"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:visibility="gone">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="2dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_account_password">
            </ImageView>
            <EditText
                android:id="@+id/settings_register_password_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                android:hint="@string/register_password_hint">
            </EditText>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp">

            <TextView
                android:id="@+id/exception_weak_password_settings"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@android:color/holo_red_dark">
            </TextView>
        </FrameLayout>

        <Button
            android:id="@+id/settings_dialog_register_button_second"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/enter_register_button_text">
        </Button>

        <Button
            android:id="@+id/settings_dialog_register_button_first"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/enter_register_button_text">
        </Button>
    </FrameLayout>
</FrameLayout>